three points completed

--- a/SK-TRAINING_Winter_2021/Homeworks/homework1/homework2/css/style.css
+++ b/SK-TRAINING_Winter_2021/Homeworks/homework1/homework2/css/style.css
@@ -20,6 +20,7 @@ main p::after,
   font-family: "Lato", sans-serif;
   position: absolute;
   font-size: 30px;
+  color: #42a9b8;
 }
 main p::after {
   content: "«";
